--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,52 @@
-h1{
+:root{
+    --blanco: #ffffff;
+    --negro: #212121;
+    --primario: #ffc107;
+    --secundario: #0097a7;
+    --gris: #757575;
+}
+
+/* 1rem * 10px */
+
+html{font-size: 62.5%;}
+
+body{
+    font-size: 16px;
+    font-family: 'Krub', sans-serif;
+}
+
+.titulo{
     text-align: center;
-    text-transform: uppercase;
-    color: red;
+    font-size: 3.8rem;
+}
+
+.titulo span{
+    font-size: 2rem;
+}
+
+.contenedor{
+    width: 120rem;
+    margin: auto;
+}
+
+.nav-bg{
+    background-color: var(--secundario);
+}
+
+.navegacion-principal{
+    display: flex;
+    justify-content: space-between;
+}
+
+.navegacion-principal a{
+    color: var(--blanco);
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 700;
+    padding: 1rem;
+}
+
+.navegacion-principal a:hover{
+    background-color: var(--primario);
+    color: var(--negro);
 }
