--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,14 @@
 
 /* 1rem * 10px */
 
-html{font-size: 62.5%;}
+html{
+    font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
 
 body{
     font-size: 16px;
@@ -25,7 +32,7 @@ body{
 }
 
 .contenedor{
-    width: 120rem;
+    max-width: 120rem;
     margin: auto;
 }
 
@@ -35,10 +42,19 @@ body{
 
 .navegacion-principal{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+}
+
+@media (min-width: 780px) {
+    .navegacion-principal{
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .navegacion-principal a{
+    display: block;
+    text-align: center;
     color: var(--blanco);
     text-decoration: none;
     font-size: 2rem;
@@ -49,4 +65,21 @@ body{
 .navegacion-principal a:hover{
     background-color: var(--primario);
     color: var(--negro);
+}
+
+.hero{
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative; /*el padre siempre se posiciona relative para que el hijo se pueda posicionar de forma 
+    adsolute*/
+}
+
+.contenido-hero{
+    position: absolute;
+    background-color: rgba(0,0,0,0.5); /*Anterior*/
+    background-color: rgb( 0 0 0 / 70%);
+    width: 100%;
+    height: 100%;
 }
