--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 /* 1rem * 10px */
 
+/* GLOBALES */
 html{
     font-size: 62.5%;
     box-sizing: border-box;
@@ -17,25 +18,61 @@ html{
     box-sizing: inherit;
 }
 
-body{
-    font-size: 16px;
-    font-family: 'Krub', sans-serif;
-}
-
-.titulo{
-    text-align: center;
-    font-size: 3.8rem;
-}
-
-.titulo span{
-    font-size: 2rem;
-}
-
 .contenedor{
     max-width: 120rem;
     margin: auto;
 }
 
+.boton{
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+    width: 90%;
+    text-align: center;
+}
+
+@media (min-width: 480px) {
+    .boton{
+        width: auto;
+    }
+}
+
+/* TIPOGRAFIA */
+
+body{
+    font-size: 16px;
+    font-family: 'Krub', sans-serif;
+}
+
+h1{
+    font-size: 3.8rem;
+}
+
+h2{
+    font-size: 2.8rem;
+}
+
+h3{
+    font-size: 1.8rem;
+}
+
+h1,h2,h3{
+    text-align: center;
+}
+
+/* TITULOS */
+
+.titulo span{
+    font-size: 2rem;
+}
+
+/* NAVEGACION PRINCIPAL */
 .nav-bg{
     background-color: var(--secundario);
 }
@@ -67,6 +104,8 @@ body{
     color: var(--negro);
 }
 
+/* HERO */
+
 .hero{
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
@@ -82,4 +121,19 @@ body{
     background-color: rgb( 0 0 0 / 70%);
     width: 100%;
     height: 100%;
+    /*Codigo para alinear vertical y horizontalmente*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /*Codigo para alinear vertical y horizontalmente*/
+}
+
+.contenido-hero h2, .contenido-hero p{
+    color: var(--blanco);
+}
+
+.contenido-hero .ubicacion{
+    display: flex;
+    align-items: flex-end;
 }
