--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --blanco: #ffffff;
     --negro: #212121;
     --primario: #ffc107;
@@ -9,21 +9,23 @@
 /* 1rem * 10px */
 
 /* GLOBALES */
-html{
+html {
     font-size: 62.5%;
     box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
-.contenedor{
+.contenedor {
     max-width: 120rem;
     margin: auto;
 }
 
-.boton{
+.boton {
     background-color: var(--secundario);
     color: var(--blanco);
     padding: 1rem 3rem;
@@ -38,58 +40,70 @@ html{
 }
 
 @media (min-width: 480px) {
-    .boton{
+    .boton {
         width: auto;
     }
 }
 
-/* TIPOGRAFIA */
-
-body{
-    font-size: 16px;
-    font-family: 'Krub', sans-serif;
+.sombra {
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(64, 64, 64, 0.54);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(64, 64, 64, 0.54);
+    box-shadow: 0px 5px 15px 0px rgba(64, 64, 64, 0.54);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 2rem;
 }
 
-h1{
+/* TIPOGRAFIA */
+
+body {
+    font-size: 16px;
+    font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, #DFE9F3 0%, var(--blanco));
+}
+
+h1 {
     font-size: 3.8rem;
 }
 
-h2{
+h2 {
     font-size: 2.8rem;
 }
 
-h3{
+h3 {
     font-size: 1.8rem;
 }
 
-h1,h2,h3{
+h1,
+h2,
+h3 {
     text-align: center;
 }
 
 /* TITULOS */
 
-.titulo span{
+.titulo span {
     font-size: 2rem;
 }
 
 /* NAVEGACION PRINCIPAL */
-.nav-bg{
+.nav-bg {
     background-color: var(--secundario);
 }
 
-.navegacion-principal{
+.navegacion-principal {
     display: flex;
     flex-direction: column;
 }
 
 @media (min-width: 780px) {
-    .navegacion-principal{
+    .navegacion-principal {
         flex-direction: row;
         justify-content: space-between;
     }
 }
 
-.navegacion-principal a{
+.navegacion-principal a {
     display: block;
     text-align: center;
     color: var(--blanco);
@@ -99,26 +113,29 @@ h1,h2,h3{
     padding: 1rem;
 }
 
-.navegacion-principal a:hover{
+.navegacion-principal a:hover {
     background-color: var(--primario);
     color: var(--negro);
 }
 
 /* HERO */
 
-.hero{
+.hero {
     background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
-    position: relative; /*el padre siempre se posiciona relative para que el hijo se pueda posicionar de forma 
+    position: relative;
+    /*el padre siempre se posiciona relative para que el hijo se pueda posicionar de forma 
     adsolute*/
+    margin-bottom: 2rem;
 }
 
-.contenido-hero{
+.contenido-hero {
     position: absolute;
-    background-color: rgba(0,0,0,0.5); /*Anterior*/
-    background-color: rgb( 0 0 0 / 70%);
+    background-color: rgba(0, 0, 0, 0.5);
+    /*Anterior*/
+    background-color: rgb(0 0 0 / 70%);
     width: 100%;
     height: 100%;
     /*Codigo para alinear vertical y horizontalmente*/
@@ -129,11 +146,12 @@ h1,h2,h3{
     /*Codigo para alinear vertical y horizontalmente*/
 }
 
-.contenido-hero h2, .contenido-hero p{
+.contenido-hero h2,
+.contenido-hero p {
     color: var(--blanco);
 }
 
-.contenido-hero .ubicacion{
+.contenido-hero .ubicacion {
     display: flex;
     align-items: flex-end;
 }
